Fix T37577: Joining two objects with different UVs destroys UVs of one object in some specific, reproducable, cases

MLOOPUV CDlayers had "UV Coord" default name, instead of "UVMap", when it is mandatory matching MTEXPOLY and MLOOPUV to have the same name!